--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-PORT=
-HOST=
-NODE_ENV=
-APP_KEY=
+PORT=3333
+HOST=localhost
+NODE_ENV=development
+APP_KEY=TInLRh_gkX3q_mpu85sbw7dkMf8MZk_I
 DB_CONNECTION=
 PG_HOST=
 PG_PORT=
